canary-ro.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  strategy:
    canary:
      canaryService: service-canary
      stableService: service-stable
      trafficRouting:
        nginx:
          stableIngress: stable-probe
      steps:
      - setWeight: 50
      - pause: {}
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
        - name: canary-pod
          image: vvaarruunn/demo_live_ready:v3  # Replace with your Docker image name
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ready  # Replace with the actual path that indicates readiness in your application
              port: 3000
            initialDelaySeconds: 1 # Delay before the first probe
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /live  # Replace with the actual path that indicates readiness in your application
              port: 3000
            initialDelaySeconds: 1 # Delay before the first probe
            periodSeconds: 1
