service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-stable
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
 ---
apiVersion: v1
kind: Service
metadata:
  name: service-canary
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
